IDC workshop fixes

--- a/instructions/tasks/bonus_1.html
+++ b/instructions/tasks/bonus_1.html
@@ -28,7 +28,7 @@
         <img src="../images/Mindy_Buttons_cuddle.png"/><br>
         <br>
         Ask the instructor for some buttons and try to add control to the device with them as well.<br>
-        You might want to read about <a href="https://www.allaboutcircuits.com/technical-articles/switch-bounce-how-to-deal-with-it/">switch debounce</a> before writing the code<br>
+        You might want to read about <a href="https://www.allaboutcircuits.com/technical-articles/switch-bounce-how-to-deal-with-it/" target="_blank">switch debounce</a> before writing the code<br>
         <br>
         <br>
         <b>If you're done - call an instructor to check and to get your points before continuing</b>
